--- a/src/main/res/layout/about_c_image.xml
+++ b/src/main/res/layout/about_c_image.xml
@@ -11,19 +11,25 @@
         android:layout_weight="4"
         android:gravity="bottom|center"
         android:orientation="vertical">
+
         <TextView
             android:id="@+id/aboutImgName"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/comfortaa_bold"
-            android:textSize="60sp"
-            android:text="Сузір'я" />
+            android:text="@string/placeHolder"
+            android:gravity="center"
+            android:textSize="60sp"/>
+
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/resize"
-            android:layout_gravity="end"/>
+            android:layout_gravity="end"
+            android:contentDescription="@string/resize_arrow"/>
+
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -31,18 +37,15 @@
         android:gravity="center"
         android:background="@drawable/border"
         android:layout_margin="5dp">
-        <LinearLayout
+
+        <ImageView
+            android:id="@+id/img"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center"
-            android:layout_margin="5dp">
-            <ImageView
-                android:id="@+id/img"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@mipmap/logo"/>
-        </LinearLayout>
-    </LinearLayout>
+            android:src="@mipmap/logo"
+            android:layout_margin="5dp"
+            android:contentDescription="@string/constellation_image"/>
 
+    </LinearLayout>
 
 </LinearLayout>
