--- a/src/main/res/layout/list_fragment.xml
+++ b/src/main/res/layout/list_fragment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -7,23 +8,19 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="5dp"
         android:layout_weight="1"
-        android:orientation="horizontal"
-        android:layout_margin="5dp">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/logo"
-            android:layout_gravity="center"/>
+        android:orientation="horizontal">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:baselineAligned="false"
+            android:gravity="start|center"
             android:text="@string/choose_text"
             android:textSize="35sp"
-            android:layout_marginStart="5dp"
-            android:gravity="start|center"/>
+            app:drawableStartCompat="@mipmap/logo"
+            android:drawablePadding="5dp"/>
 
     </LinearLayout>
     <View
