--- a/src/main/res/layout-v26/about_c_image.xml
+++ b/src/main/res/layout-v26/about_c_image.xml
@@ -11,7 +11,7 @@
         android:layout_weight="4"
         android:gravity="bottom|center"
         android:orientation="vertical">
-
+        
         <TextView
             android:id="@+id/aboutImgName"
             android:layout_width="match_parent"
@@ -19,9 +19,12 @@
             android:fontFamily="@font/comfortaa_bold"
             android:text="@string/placeHolder"
             android:gravity="center"
-            android:textSize="20sp"
+            
+            android:autoSizeTextType="uniform"
+            android:autoSizeMinTextSize="20sp"
+            android:autoSizeMaxTextSize="40sp"
             android:layout_weight="1"/>
-
+        
         <ImageView
             android:layout_weight="1"
             android:layout_width="wrap_content"
